# r2logs

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
src/: api.rs  commands.rs  config.rs  main.rs
