[package]
name = "r2logs"
version = "0.2.3"
edition = "2021"
description = "A simple CLI tool to retrieve logs from Cloudflare Logs Engine."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
clap = { version = "4.4.16", features = ["derive"] }
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.35.1", features = ["full"] }

[dev-dependencies]
mockito = "1.2.0"
